feedbacks have done

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,23 +28,25 @@
   font-size: 12px;
 }
 .arrowChangelog {
-  margin-left: 20px;
+  margin-left: 8px;
 }
 .line{
   border-bottom: 1px solid white;
   position: relative;
   width: 0px;
+  margin-left: 15px;
 
   transition: all 0.3s ease;
 }
 .readChangelog:hover .line{
-  width: 20px;
+  width: 15px;
+  margin-left: 0;
 }
 
 /* Navbar */
 .navbarTitle {
   margin-left: 10px;
-  font-size: 25px;
+  font-size: 37px;
   font-family: 'Raleway', sans-serif;
   cursor: default;
   color: #C79A9A;
@@ -68,7 +70,7 @@
   cursor: pointer;
 }
 .waitlist { 
-  background: linear-gradient(98.19deg, #0047FF 2.94%, #0022FF 93.48%);
+  background-color: #0047FF;
   border-radius: 88px;
   cursor: pointer;
 
@@ -194,7 +196,7 @@
   padding: 10px 25px;
   margin-right: 12px;
 
-  background: linear-gradient(98.19deg, #0047FF 2.94%, #0022FF 93.48%);
+  background-color: #0047FF;
   border-radius: 88px;
   cursor: pointer;
 
@@ -242,7 +244,7 @@
 
 
 .contactButton {
-  background: linear-gradient(98.19deg, #0047FF 2.94%, #0022FF 93.48%);
+  background-color: #0047FF;
   border-radius: 88px;
 
   padding: 10px;
